2019-03-09  Ajay Saini  <sainiak@uci.edu>

	* git tag -a 0.7.4 -m 'beta01: AIRS pre-2002 correction'; git push --tags

2019-03-08  Ajay Saini  <sainiak@uci.edu>

	* Debug tilt_angle.py error

	* Documentation

2019-03-07  Ajay Saini  <sainiak@uci.edu>

	* README.md: Badge for ReadtheDocs

	* Convert docs/source/index.md to index.rst

	* conf.py: CommonMarkParser for .md files

	* Documentation

2019-03-06  Ajay Saini  <sainiak@uci.edu>

	* Add new sample files

	* test.py: Correct file names

	* Make jaws.ess.uci.edu as webserver

	 * Documentation

2019-03-05  Ajay Saini  <sainiak@uci.edu>

	* Work on error messages

	* Documentation

2019-03-04  Ajay Saini  <sainiak@uci.edu>

	* git tag -a 0.7.3 -m 'alpha03: psost-processing correction'; git push --tags

	* Documentation

2019-03-01  Ajay Saini  <sainiak@uci.edu>

	* git tag -a 0.7.2 -m 'alpha02: cleardays and derivative'; git push --tags

2019-02-28  Ajay Saini  <sainiak@uci.edu>

	* fsds_adjust.py: Correct function to calculate derivative

	* Log messages for exception

2019-02-27  Ajay Saini  <sainiak@uci.edu>

	* Resolve fsds_adjusted error

	* Readthedocs and sphinx tutorial

2019-02-26  Ajay Saini  <sainiak@uci.edu>

	* Testing of GCNet after changes

	* Documentation

2019-02-25  Ajay Saini  <sainiak@uci.edu>

	* Work on MERRA_cf_toa

2019-02-24  Ajay Saini  <sainiak@uci.edu>

	* Detect clear days from 'cleardays.csv'

	* Add path for merra_cf_toa files and update for ceres_cf_toa

	* fsds_adjust.py: Don't divide cf by 100 if merra_cf_toa

2019-02-19  Ajay Saini  <sainiak@uci.edu>

	* tilt_angle.py: Skip poping out of list if empty

	* git tag -a 0.7.1 -m 'alpha01: MERRA'; git push --tags

2019-02-15  Ajay Saini  <sainiak@uci.edu>

	* Add '--merra' as an option and tilt_angle.py reads per station RRTM file instead of per day

	* fsds_adjust.py: Exception for list index out of range toa[idx]

2019-02-06  Ajay Saini  <sainiak@uci.edu>

	* jaws.py: Modification to read POLENET stations
